[tool.poetry]
name = "agentok-api"
version = "0.1.1"
description = "Agentok APIs"
authors = ["Dustland <agentok@dustland.ai>"]
readme = "README.md"
package-mode = false

[tool.virtualenvs]
in-project = true
create = true
prefer-active-python = true

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
diskcache = "5.6.3"
fastapi = "^0.139.0"
gotrue = "^2.12.4"
Jinja2 = "^3.1.6"
Pillow = "^12.3.0"
pydantic = "^2.13.4"
python-dotenv = "^1.2.2"
regex = "^2026.6.28"
requests = "^2.34.2"
starlette = "^1.3.1"
termcolor = ">=2.4,<2.5"
uvicorn = "^0.50.1"
supabase = "^2.31.0"
tavily-python = "^0.7.26"
cohere = "^7.0.5"
python-magic = "^0.4.27"
ag2 = {version = "1.0.0b0", extras = ["openai", "tavily"]}
httpx = {version = "^0.28.1", extras = ["socks", "http2"]}
socksio = "^1.0.0"
sentence-transformers = "^5.6.0"
playwright = "^1.61.0"
nest-asyncio = "^1.6.0"
agentops = "^0.4.21"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"
alembic = "^1.18.5"
pipreqs = { version = "^0.5.0", python = "<3.13" }

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
